force-app/main/default/objects/WorkType/fields/CoIT_EvaluationWorkType__c.field-meta.xml
<CustomField>
    <fullName>CoIT_EvaluationWorkType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Evaluacion Work Type</label>
    <referenceTo>WorkType</referenceTo>
    <relationshipLabel>Work Types</relationshipLabel>
    <relationshipName>Work_Types</relationshipName>
    <type>Lookup</type>
</CustomField>