force-app/main/default/objects/WorkType/fields/CoIT_NameClean__c.field-meta.xml
<CustomField>
    <fullName>CoIT_NameClean__c</fullName>
    <label>NameClean</label>
    <type>TextArea</type>
</CustomField>