force-app/main/default/objects/WorkType/fields/CoIT_Require_Rescheduled__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Require_Rescheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Require Rescheduled?</label>
    <type>Checkbox</type>
</CustomField>