force-app/main/default/objects/WorkType/fields/CoIT_RequiresEvaluation__c.field-meta.xml
<CustomField>
    <fullName>CoIT_RequiresEvaluation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requiere evaluación?</label>
    <type>Checkbox</type>
</CustomField>