force-app/main/default/objects/WorkType/fields/CoIT_Second_Scheduling_Policy_Used__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Second_Scheduling_Policy_Used__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Second Scheduling Policy Used</label>
    <referenceTo>FSL__Scheduling_Policy__c</referenceTo>
    <relationshipLabel>Work Types (Second Scheduling Policy Used)</relationshipLabel>
    <relationshipName>Work_Types1</relationshipName>
    <type>Lookup</type>
</CustomField>