force-app/main/default/objects/WorkType/fields/CoIT_Shared_With_Partner__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Shared_With_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shared with Partner</label>
    <type>Checkbox</type>
</CustomField>