force-app/main/default/objects/WorkType/fields/CoIT_Show_ServiceAppointment__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Show_ServiceAppointment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Service Appointment</label>
    <type>Checkbox</type>
</CustomField>