force-app/main/default/objects/WorkType/fields/CoIT_Show_WorkOrderLineItem__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Show_WorkOrderLineItem__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Work Order Line Item</label>
    <type>Checkbox</type>
</CustomField>