force-app/main/default/objects/WorkType/fields/CoIT_Show_WorkPlan__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Show_WorkPlan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Work Plan</label>
    <type>Checkbox</type>
</CustomField>