force-app/main/default/objects/WorkType/fields/CoIT_WOM_Entitlement_Id__c.field-meta.xml
<CustomField>
    <fullName>CoIT_WOM_Entitlement_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entitlement</label>
    <referenceTo>Entitlement</referenceTo>
    <relationshipLabel>Work Types</relationshipLabel>
    <relationshipName>Work_Types</relationshipName>
    <type>Lookup</type>
</CustomField>