force-app/main/default/objects/WorkType/fields/CoIT_WOM_Scheduling_Model__c.field-meta.xml
<CustomField>
    <fullName>CoIT_WOM_Scheduling_Model__c</fullName>
    <label>Scheduling Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CoIT_WOM_Scheduling_Model</valueSetName>
    </valueSet>
</CustomField>