force-app/main/default/objects/WorkType/fields/CoIT_WOM_Scheduling_Policy_Used__c.field-meta.xml
<CustomField>
    <fullName>CoIT_WOM_Scheduling_Policy_Used__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Define the Scheduling Policy to Use in Schedule process</description>
    <label>Scheduling Policy Used</label>
    <referenceTo>FSL__Scheduling_Policy__c</referenceTo>
    <relationshipLabel>Work Types</relationshipLabel>
    <relationshipName>Work_Types</relationshipName>
    <type>Lookup</type>
</CustomField>