force-app/main/default/objects/WorkType/listViews/All_WorkTypes.listView-meta.xml
<ListView>
    <fullName>All_WorkTypes</fullName>
    <columns>Name</columns>
    <columns>CoIT_WOM_Scheduling_Type__c</columns>
    <columns>CoIT_WOM_Entitlement_Id__c</columns>
    <columns>CoIT_WOM_Scheduling_Model__c</columns>
    <columns>CoIT_WOM_Appointment_Type__c</columns>
    <columns>CoIT_WOM_Scheduling_Policy_Used__c</columns>
    <columns>CoIT_Second_Scheduling_Policy_Used__c</columns>
    <columns>CoIT_Show_ServiceAppointment__c</columns>
    <columns>CoIT_Show_WorkOrderLineItem__c</columns>
    <columns>CoIT_Show_WorkPlan__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Work Types</label>
</ListView>